hphp/hack/test/typecheck/this_member.php.exp
File "this_member.php", line 16, characters 5-20:
Invalid assignment (Typing[4110])
File "this_member.php", line 15, characters 24-24:
This is the expression dependent type <expr#1>
File "this_member.php", line 16, characters 5-6:
  where '<expr#1>' is a reference to this expression
File "this_member.php", line 13, characters 38-41:
It is incompatible with the expression dependent type <static>
File "this_member.php", line 16, characters 13-17:
  where '<static>' refers to the late bound type of the enclosing class
